--- a/css/style.css
+++ b/css/style.css
@@ -25,14 +25,25 @@ body {
     background-repeat: no-repeat;
 }
 
-.slides-navigation a.prev {
-    left: 20px;
-    background-image: url("../img/icons/prev.png");
+.down-navigation {
+    position: absolute;
+    left: 50%;
+    margin-left: -25px;
+    top: 50%;
+    margin-top: 250px;
+    -webkit-animation: bounce .9s infinite alternate;
+    -moz-animation: bounce .9s infinite alternate;
+    animation: bounce .9s infinite alternate;
 }
 
-.slides-navigation a.next {
-    right: 20px;
-    background-image: url("../img/icons/next.png");
+@-webkit-keyframes bounce {
+    to { -webkit-transform: scale(1.2); }
+}
+@-moz-keyframes bounce {
+    to { -moz-transform: scale(1.2); }
+}
+@keyframes bounce {
+    to { transform: scale(1.2); }
 }
 
 .titleMessage {
@@ -213,6 +224,7 @@ body {
 
 .items li img {
     width: 100%;
+    /* height: 200px; */
 
     -webkit-transition: all 0.2s linear, 1s;
     -moz-transition: all 0.2s linear, 1s;
@@ -362,3 +374,50 @@ body {
     height: 100%;
     background: url('../img/loader.gif') center center no-repeat;
 }
+
+.social-links {
+    padding: 0;
+}
+
+.social-links li {
+    display: inline-block;
+}
+
+.social-links img {
+    width: 40px;
+}
+
+.social-links a img {
+    -webkit-transition: all 1s linear, 1s;
+    -moz-transition: all 1s linear, 1s;
+    -o-transition: all 1s linear, 1s;
+    -ms-transition: all 1s linear, 1s;
+    transition: all 1s linear, 1s;
+}
+.social-links a #github:hover {
+    background-color: #396292;
+}
+
+.social-links a #linkedIn:hover {
+    background-color: #0077B5;
+}
+
+.social-links a #stackOverFlow:hover {
+    background-color: #906948;
+}
+
+.social-links a #twitter:hover {
+    background-color: #38A1F3;
+}
+
+.social-links a #medium:hover {
+    background-color: #06A668;
+}
+
+.header-social-link {
+    position: absolute;
+    left: 50%;
+    margin-left: -100px;
+    top: 50%;
+    margin-top: 150px;
+}  
